argocd/apps/hoarder/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-web-deployment
  namespace: hoarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-web
  template:
    metadata:
      labels:
        app: hoarder-web
    spec:
      containers:
      - env:
        - name: MEILI_ADDR
          value: http://meilisearch:7700
        - name: BROWSER_WEB_URL
          value: http://chrome:9222
        - name: DATA_DIR
          value: /data
        - name: MEILI_MASTER_KEY
          valueFrom:
            secretKeyRef:
              name: cluster-external-secrets
              key: MEILI_MASTER_KEY
        - name: NEXT_PUBLIC_SECRET
          valueFrom:
            secretKeyRef:
              name: cluster-external-secrets
              key: NEXT_PUBLIC_SECRET
        - name: NEXTAUTH_SECRET
          valueFrom:
            secretKeyRef:
              name: cluster-external-secrets
              key: NEXTAUTH_SECRET
        - name: OPENAI_BASE_URL
          valueFrom:
            secretKeyRef:
              name: cluster-external-secrets
              key: OPENAI_BASE_URL
        - name: OPENAI_API_KEY
          valueFrom:
            secretKeyRef:
              name: cluster-external-secrets
              key: OPENAI_API_KEY
        - name: INFERENCE_TEXT_MODEL
          value: gemini-2.0-flash
        - name: INFERENCE_IMAGE_MODEL
          value: gemini-2.0-flash
        - name: EMBEDDING_TEXT_MODEL
          value: text-embedding-004
        - name: INFERENCE_CONTEXT_LENGTH
          value: "1048576"
        - name: DISABLE_SIGNUPS
          value: true
        - name: HOARDER_VERSION
          value: release
        - name: NEXTAUTH_URL
          value: http://localhost:3000
        image: ghcr.io/hoarder-app/hoarder:release
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
