argocd/apps/hoarder/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
  namespace: hoarder
spec:
  ports:
  - port: 9222
    protocol: TCP
    targetPort: 9222
  selector:
    app: chrome
  type: ClusterIP
